--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,16 @@ anyio==3.6.1
 APScheduler==3.9.1
 async-timeout==4.0.2
 attrs==22.1.0
+Babel==2.9.1
+certifi==2022.6.15
+charset-normalizer==2.1.0
+frozenlist==1.3.1
+idna==3.3
+multidict==6.0.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+six==1.16.0
+sniffio==1.2.0
+tzdata==2022.1
+tzlocal==4.2
+yarl==1.8.1
