--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiogram==2.21
 aiohttp==3.8.1
+aioschedule==0.5.2
 aiosignal==1.2.0
 anyio==3.6.1
 APScheduler==3.9.1
@@ -13,6 +14,7 @@ idna==3.3
 multidict==6.0.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
+schedule==1.1.0
 six==1.16.0
 sniffio==1.2.0
 tzdata==2022.1
